...
        ) : (
          <TransactionList transactions={filteredTransactions} />
        )}
      </ScrollView>

      <Stack.Screen.BackButton displayMode="minimal" />
      <Stack.Screen.Title large>Transactions</Stack.Screen.Title>
      {Platform.OS === "ios" ? (
        <Stack.Toolbar placement="right">
          <Stack.Toolbar.Button
            accessibilityLabel="Add transaction"
            icon="plus"
            onPress={() => {
...
          setQuery("");
          searchBarRef.current?.blur();
        }}
        onChangeText={(event) => {
          setQuery(event.nativeEvent.text);
        }}
        placeholder="Search transactions"
        placement="automatic"
        ref={searchBarRef}
      />
    </>
  );
}
...
