import { TabStackLayout } from "@/components/tab-stack-layout";

export default function DashboardLayout() {
  return <TabStackLayout title="Dashboard" largeTitle dashboardActions />;
}
