appId: com.tsatsujnr.balanced
---
- launchApp
- extendedWaitUntil:
    visible: "Dashboard"
    timeout: 30000
- tapOn:
    text: "Search transactions"
- extendedWaitUntil:
    visible: "Transactions"
    timeout: 10000
- assertVisible: "Search transactions"
